[package]
name = "p2p-frost"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3.29"
libp2p = { version="0.53", features = [ "tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Frost
frost-secp256k1 = { version = "0.7.0", features = ["serde"] }
serde = "1.0.193"
serde_json = "1.0.108"
log = "0.4.20"
once_cell = "1.19.0"
